# td

./: .gitignore  CMakeLists.txt  build.sh  build_native.sh
CMake/: TdSetUpCompiler.cmake
td/generate/: CMakeLists.txt
td/generate/tl-parser/: CMakeLists.txt  portable_endian.h
td/mtproto/: DhHandshake.cpp
tdactor/test/: actors_simple.cpp
tdtl/: CMakeLists.txt
tdutils/: CMakeLists.txt
tdutils/generate/: CMakeLists.txt
tdutils/td/utils/: BigNum.cpp
tdutils/td/utils/port/: FileFd.cpp  IPAddress.cpp  MemoryMapping.cpp  SocketFd.cpp  Stat.cpp  config.h  path.cpp  platform.h  rlimit.cpp  signals.cpp  sleep.cpp  sleep.h  uio.c  uname.cpp
tdutils/td/utils/port/detail/: NativeFd.cpp  ThreadPthread.cpp
tdutils/test/: List.cpp  StealingQueue.cpp  misc.cpp  port.cpp  pq.cpp
test/: CMakeLists.txt  db.cpp  http.cpp  main.cpp  mtproto.cpp  online.cpp  secret.cpp  secure_storage.cpp  tdclient.cpp  tqueue.cpp
vitaports/: inet.c  string.h  td_missing_func_placeholder.cpp
vitaports/machine/: time.h
vitaports/sys/: ioctl.h  socket.h
vitaports/tdtest_livearea/: param.sfo
